--- a/ansible-aws-ec2-deploy.yaml
+++ b/ansible-aws-ec2-deploy.yaml
@@ -16,6 +16,8 @@
   tasks:
     - name: Launch EC2 instance
       amazon.aws.ec2_instance:
+        # state: present  # ensures instance is created
+        state: absent  # ensures instance is removed
         name: "{{ instance_name }}"
         key_name: "{{ key_name }}"
         instance_type: "{{ instance_type }}"
