--- a/ansible-aws-s3-deploy.yaml
+++ b/ansible-aws-s3-deploy.yaml
@@ -5,15 +5,16 @@
   gather_facts: no
 
   vars:
-    bucket_name: yaswanth-demo-s3-bucket-{{ 99999 | random }}
+    generated_suffix: "{{ 99999 | random }}"
+    bucket_name: "{{ bucket_name | default('yaswanth-demo-s3-bucket-' ~ generated_suffix) }}"
 
   tasks:
-    - name: Create S3 bucket
+    - name: 📦 Create S3 bucket
       amazon.aws.s3_bucket:
         name: "{{ bucket_name }}"
         state: present
         region: ap-south-1
 
-    - name: Show created bucket name
+    - name: 🖨️ Show created bucket name
       debug:
         msg: "✅ Created bucket name is: {{ bucket_name }}"
